--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                                     </li>
                                     <li class="nav-item">
                                         <a href="#features" class="page-scroll"
-                                            aria-label="Toggle navigation">Features</a>
+                                            aria-label="Toggle navigation">Partidos</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="javascript:void(0)" aria-label="Toggle navigation">Overview</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#pricing" class="page-scroll"
-                                            aria-label="Toggle navigation">Pricing</a>
+                                        <a href="http://localhost/kemurileague/" class="page-scroll"
+                                            aria-label="Toggle navigation">Clasificación</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="javascript:void(0)" aria-label="Toggle navigation">Team</a>
