--- a/index.html
+++ b/index.html
@@ -60,42 +60,45 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ms-auto">
                                     <li class="nav-item">
-                                        <a href="#home" class="page-scroll active"
+                                        <a href="#home"
                                             aria-label="Toggle navigation">Inicio</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#features" class="page-scroll"
-                                            aria-label="Toggle navigation">Partidos</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="javascript:void(0)" aria-label="Toggle navigation">Overview</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="http://localhost/kemurileague/" class="page-scroll"
-                                            aria-label="Toggle navigation">Clasificación</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="javascript:void(0)" aria-label="Toggle navigation">Team</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
                                             data-bs-target="#submenu-1-4" aria-controls="navbarSupportedContent"
-                                            aria-expanded="false" aria-label="Toggle navigation">Blog</a>
+                                            aria-expanded="false" aria-label="Toggle navigation">Partidos</a>
                                         <ul class="sub-menu collapse" id="submenu-1-4">
-                                            <li class="nav-item"><a href="javascript:void(0)">Blog Grid Sidebar</a>
-                                            </li>
-                                            <li class="nav-item"><a href="javascript:void(0)">Blog Single</a></li>
-                                            <li class="nav-item"><a href="javascript:void(0)">Blog Single
-                                                    Sibebar</a></li>
+                                            <li class="nav-item"><a href="javascript:void(0)">Calendario</a></li>
+                                            <li class="nav-item"><a href="javascript:void(0)">Resultados</a></li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="javascript:void(0)" aria-label="Toggle navigation">Contact</a>
+                                        <a href="javascript:void(0)" aria-label="Toggle navigation">Clasificación</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="http://localhost/kemurileague/"
+                                            aria-label="Toggle navigation">Equipos</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="javascript:void(0)" aria-label="Toggle navigation">Jugadores</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
+                                            data-bs-target="#submenu-1-4" aria-controls="navbarSupportedContent"
+                                            aria-expanded="false" aria-label="Toggle navigation">Estadísticas</a>
+                                        <ul class="sub-menu collapse" id="submenu-1-4">
+                                            <li class="nav-item"><a href="javascript:void(0)">Equipos</a></li>
+                                            <li class="nav-item"><a href="javascript:void(0)">Jugadores</a></li>
+                                            <li class="nav-item"><a href="javascript:void(0)">Temporada</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="javascript:void(0)" aria-label="Toggle navigation">Contacto</a>
                                     </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
                             <div class="button add-list-button">
-                                <a href="javascript:void(0)" class="btn">Get it now</a>
+                                <a href="javascript:void(0)" class="btn">Inscríbete</a>
                             </div>
                         </nav>
                         <!-- End Navbar -->
