--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="hero-content">
-                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">A powerful app for your business.</h1>
-                        <p class="wow fadeInLeft" data-wow-delay=".6s">From open source to pro services, Piqes helps you
+                        <h1 class="wow fadeInLeft" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">A powerful app for your business.</h1>
+                        <p class="wow fadeInLeft" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">From open source to pro services, Piqes helps you
                             to build, deploy, test, and monitor apps.</p>
-                        <div class="button wow fadeInLeft" data-wow-delay=".8s">
+                        <div class="button wow fadeInLeft" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
                             <a href="javascript:void(0)" class="btn"><i class="lni lni-apple"></i> App Store</a>
                             <a href="javascript:void(0)" class="btn btn-alt"><i class="lni lni-play-store"></i> Google
                                 Play</a>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-12 col-12">
-                    <div class="hero-image wow fadeInRight" data-wow-delay=".4s">
+                    <div class="hero-image wow fadeInRight" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInRight;">
                         <img src="assets/images/hero/phone.png" alt="#">
                     </div>
                 </div>
