--- a/index.html
+++ b/index.html
@@ -115,9 +115,8 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="hero-content">
-                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">A poweasdrful app for your business.</h1>
-                        <p class="wow fadeInLeft" data-wow-delay=".6s">From open source to pro services, Piqes helps you
-                            to build, deploy, test, and monitor apps.</p>
+                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">Kemuri Games League.</h1>
+                        <p class="wow fadeInLeft" data-wow-delay=".6s">La Liga que Marca la Diferencia.</p>
                         <div class="button wow fadeInLeft" data-wow-delay=".8s">
                             <a href="javascript:void(0)" class="btn"><i class="lni lni-discord"></i> Discord</a>
                             <a href="javascript:void(0)" class="btn btn-alt"><i class="lni lni-twitter-original"></i> Twitter</a>
@@ -140,11 +139,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-title">
-                        <h3 class="wow zoomIn" data-wow-delay=".2s">Features</h3>
-                        <h2 class="wow fadeInUp" data-wow-delay=".4s">Your Experience Gets Better And Better Over Time.
+                        <h3 class="wow zoomIn" data-wow-delay=".2s">Características</h3>
+                        <h2 class="wow fadeInUp" data-wow-delay=".4s">Vuestra Experiencia Mejorará Con El Tiempo.
                         </h2>
-                        <p class="wow fadeInUp" data-wow-delay=".6s">There are many variations of passages of Lorem
-                            Ipsum available, but the majority have suffered alteration in some form.</p>
                     </div>
                 </div>
             </div>
@@ -153,9 +150,9 @@
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".2s">
                         <i class="lni lni-cloud-upload"></i>
-                        <h3>Push to Deploy</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page at its layout.</p>
+                        <h3>Estadísticas al Día</h3>
+                        <p>Todas las estadísticas de tanto los jugadores como de los equipos se subirán y actualizarán
+                            todos los días.</p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
@@ -163,9 +160,9 @@
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".4s">
                         <i class="lni lni-lock"></i>
-                        <h3>SSL Certificates</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page at its layout.</p>
+                        <h3>Automatización</h3>
+                        <p>Después de jugar un partido, recogeremos las estadísticas automáticamente sin
+                            necesidad de verificación por parte de los jugadores.</p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
@@ -173,9 +170,9 @@
                     <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
                         <i class="lni lni-reload"></i>
-                        <h3>Simple Queues</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page at its layout.</p>
+                        <h3>Administración competente</h3>
+                        <p>Nuestro equipo de administradores responderán todas vuestras dudas y problemas lo antes
+                            posible y de una forma igualitaria.</p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
